syntax = "proto3";

option java_package = "com.amoseui.cameraspecs.data.camera2";
option java_multiple_files = true;

message CameraData {
  enum Type {
    TYPE_NORMAL = 0;
    TYPE_LOGICAL = 1;
    TYPE_PHYSICAL = 2;
  }

  message Camera {
    string cameraId = 1;
    Type type = 2;
    repeated int32 extensions = 3;
    bool camera1Legacy = 4;
  }

  repeated Camera cameras = 1;
}
